src/default-style.css
:host::backdrop {
  background-color: transparent !important;
}

#overlay {
  background-color: #999;
  transition-property: left, top, width, height;
  transition-duration: 240ms;

  --overlay-opacity: 0.2;
  opacity: var(--overlay-opacity);
  animation: fadein 240ms linear;
}
@keyframes fadein {
  0% {
    opacity: 0;
  }
  100% {
    opacity: var(--overlay-opacity);
  }
}

#active-overlay {
  background-color: white;
  opacity: 0.2;
  transition-property: left, top, width, height;
  transition-duration: 160ms;
  animation: pulse 1200ms linear infinite;
  z-index: 2;

  --pulse-outer-color: rgba(255, 0, 0, 0.8);
  --pulse-inner-color: rgba(128, 128, 128, 0.8);
  --pulse-outer-width: 8px;
  --pulse-max-radius: 80px;
  --pulse-blur: 3px;
}
@keyframes pulse {
  0% {
    box-shadow:
      0 0 var(--pulse-blur) 0 rgba(255, 255, 255, 0),
      0 0 var(--pulse-blur) 0 rgba(255, 255, 255, 0);
  }
  10% {
    box-shadow:
      0 0 var(--pulse-blur)
        calc(var(--pulse-max-radius) * 0.1 - var(--pulse-outer-width))
        var(--pulse-inner-color),
      0 0 var(--pulse-blur) calc(var(--pulse-max-radius) * 0.1)
        var(--pulse-outer-color);
  }
  50% {
    box-shadow:
      0 0 var(--pulse-blur)
        calc(var(--pulse-max-radius) * 0.5 - var(--pulse-outer-width))
        var(--pulse-inner-color),
      0 0 var(--pulse-blur) calc(var(--pulse-max-radius) * 0.5)
        var(--pulse-outer-color);
  }
  100% {
    box-shadow:
      0 0 var(--pulse-blur)
        calc(var(--pulse-max-radius) * 1 - var(--pulse-outer-width))
        rgba(255, 255, 255, 0),
      0 0 var(--pulse-blur) calc(var(--pulse-max-radius) * 1)
        rgba(255, 255, 255, 0);
  }
}

.hint {
  margin: 0px;
  padding: 3px;
  background-color: #333;
  color: white;
  border: white solid 1px;
  word-break: normal;
  white-space: nowrap;
  line-height: 1em;
  text-transform: uppercase;
  font-size: 16px;
  font-family:
    Consolas,
    Menlo,
    Monaco,
    Lucida Console,
    Liberation Mono,
    DejaVu Sans Mono,
    Bitstream Vera Sans Mono,
    Courier New,
    monospace,
    sans-serif;
}
.hint[data-state="disabled"] {
  opacity: 0.6;
  z-index: 0;
}
.hint[data-state="candidate"] {
  background-color: yellow;
  color: #333;
  border: #333 solid 1px;
  z-index: 1;
}
.hint[data-state="hit"] {
  background-color: #c00;
  color: white;
  border: #333 solid 1px;
  font-weight: bold;
  z-index: 2;
}

.hint:after {
  text-transform: none;
  content: attr(data-action-description);
  font-size: 50%;
  position: absolute;
  background-color: #333;
  color: white;
  border: #ccc 1px solid;
  padding: 3px;
  border-radius: 4px;
  line-height: 1em;
  transition: 200ms;
  left: 0px;
  opacity: 0;
}
.hint[data-state="hit"]:after {
  transition-delay: 100ms;
  left: calc(100% + 4px);
  opacity: 1;
}

.hint::before {
  content: attr(data-cycle-key) " +" attr(data-cycle-count);
  text-transform: none;
  font-size: 50%;
  position: absolute;
  background-color: #333;
  color: white;
  border: #ccc 1px solid;
  padding: 3px;
  border-radius: 4px;
  line-height: 1em;
  right: calc(100% + 4px);
  top: 0;
  display: none;
  white-space: nowrap;
}
.hint[data-state="hit"][data-cycle-key]::before {
  display: inline-block;
}

